# aidabbling

./: list_comprs.py  main.py  pyproject.toml
.ipynb_checkpoints/: lambda-checkpoint.py
aifromscratchbook/: key_connectors.py
aifromscratchbook/linear_algebra/: matrices.py  vectors.py
aifromscratchbook/statistics/: describe.py
aifromscratchbook/visualize_data_intro/: barchart.py  line_charts.py  visualize_data.py
introtonlp-365/: 2.2 Lowercase.ipynb  2.6 Stemming.ipynb  2.7 Lemmatization.ipynb  requirements.txt
introtonlp-365/src/: text_processing.py  tokenization.py
nlp/: 2.4 Regular Expressions.ipynb  2.5 Tokenizing Text.ipynb  2.8 N-grams.ipynb  3.2 POS tagging.ipynb
nlp/.ipynb_checkpoints/: 2.9 Practical-checkpoint.ipynb
nlp/src/: dabbling_with_nltk.py  stemming.py  text_processing.py
