[project]
name = "aipython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=7.4.0.post2",
    "gensim==4.3.3",
    "ipykernel>=7.2.0",
    "ipywidgets==8.1.5",
    "jupyterlab>=4.5.6",
    "matplotlib==3.10.0",
    "nltk==3.9.1",
    "notebook>=7.5.5",
    "numpy<2.0",
    "pandas==2.2.3",
    "pip>=26.0.1",
    "scikit-learn==1.6.0",
    "seaborn==0.13.2",
    "spacy==3.8.3",
    "textblob==0.18.0.post0",
    "torch==2.5.1",
    "transformers==4.47.1",
    "vadersentiment==3.3.2",
]
